Project created and pushed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mappingOne-One
+spring.datasource.url=jdbc:mysql://localhost:3306/mapping_one_to_many
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Raj@1996
